add 11장 IfIHaveBounghtStocks function_app.py
